Adjustments to the exporters, mainly regarding archive file locations (using the node resolver).